docs/version-1.30/modules/en/pages/howtos/contribution-guide/contributing.adoc
include::partial$variables.adoc[]
= Contributing to {short-project-name} documentation
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2025-07-09
:page-revdate: {revdate}
:description: Contributing to kubewarden documentation.
:doc-persona: ["kubewarden-developer", "kubewarden-operator", "kubewarden-manager"]
:doc-topic: ["contribution-guide", "docs-contribution"]
:doc-type: ["howto"]
:keywords: ["kubewarden", "documentation", "contributing"]
:sidebar_label: Contributing to documentation
:sidebar_position: 2
:current-version: {page-origin-branch}

_{short-project-name} welcomes suggestions for improvement from all contributors, whether new or experienced._

You can contribute to {short-project-name} documentation by:

* Improving existing content
* Creating new content
* (_Upcoming_) Helping with translation of the documentation

== Getting started

ifeval::["{build-type}" == "community"]

Everybody is welcome to suggest changes by submitting a pull request. You can
also report a bug or typo with the help of a GitHub issue to the
https://github.com/kubewarden/docs[`kubewarden/docs` repository].

To get involved with the documentation:

* Familiarize yourself with the
  https://github.com/kubewarden/docs[documentation repository] and the
  https://docusaurus.io/[static site generator].
* Docusaurus makes use of the Markdown syntax and uses https://mdxjs.com/[MDX]
  as the parser.
* Understand how to
  xref:howtos/contribution-guide/suggesting-an-improvement.adoc[suggest an
  improvement] and open a pull request.

endif::[]

ifeval::["{build-type}" == "product"]

Everybody is welcome to suggest changes by submitting a pull request. You can
also report a bug or typo with the help of a GitHub issue to the
https://github.com/rancher/kubewarden-product-docs[`rancher/kubewarden-product-docs` repository].

To get involved with the documentation:

* Familiarize yourself with the
  https://github.com/rancher/kubewarden-product-docs[documentation repository] and the
  https://antora.org/[static site generator].
* Antora makes use of the AsciiDoc syntax.
* Understand how to
  xref:howtos/contribution-guide/suggesting-an-improvement.adoc[suggest an
  improvement] and open a pull request.

endif::[]